codex-rs/tui/src/app/snapshots/codex_tui__app__owned_transcript__tests__compact_overlay_finds_hidden_live_text.snap
---
source: tui/src/app/owned_transcript_tests.rs
expression: rendered
---
/ T R A N S C R I P T / / / / / / / / / / / / / / / / / / / / / / / / / / / / /
$ 'printf visible
    printf needle'

















Find: needle
enter/⌃p older · ⌃n newer · full transcript · esc close
