codex-rs/tui/src/app/snapshots/codex_tui__app__owned_transcript__tests__external_writer_escape_command_center.snap
---
source: tui/src/app/owned_transcript_tests.rs
expression: "crate::chatwidget::tests::helpers::normalize_agent_center_snapshot(crate::chatwidget::tests::helpers::render_bottom_popup(&app.chat_widget,\n96,))"
---
  Agent command center  Group: Project  g
   All 0   Needs you 0   Working 0   Ready 0   Inactive 0                      tab/⇧tab filter
  ────────────────────────────────────────────────────────────────────────────────────────────
  Loading tasks…                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
  ? help  esc back  ↑/↓ move  enter open  n new
