codex-rs/tui/src/app/snapshots/codex_tui__app__owned_transcript__tests__fullscreen_composer_right_click_copy.snap
---
source: tui/src/app/owned_transcript_tests.rs
expression: "format!(\"{}\\n\\n{}\", selection_frames.join(\"\\n\\n\"),\nnormalize_snapshot_paths(buffer_text(crate::custom_terminal::test_support::last_rendered_buffer(&tui.terminal))))"
---
cmd-c Err("clipboard unavailable")
hello world
^^^^^······

cmd-c Ok(Unconfirmed)
hello world
^^^^^······

cmd-c Ok(Confirmed)
hello world
···········

ctrl-c Err("clipboard unavailable")
hello world
^^^^^······

ctrl-c Ok(Unconfirmed)
hello world
^^^^^······

ctrl-c Ok(Confirmed)
hello world
···········

ctrl-insert Err("clipboard unavailable")
hello world
^^^^^······

ctrl-insert Ok(Unconfirmed)
hello world
^^^^^······

ctrl-insert Ok(Confirmed)
hello world
···········

right-click Err("clipboard unavailable")
hello world
^^^^^······

right-click Ok(Unconfirmed)
hello world
^^^^^······

right-click Ok(Confirmed)
hello world
···········


› transcript text
















                                               Copied 5 chars to host clipboard

› hello world

  GPT-5.6-Sol default · /tmp/project
