codex-rs/tui/src/app/snapshots/codex_tui__app__owned_transcript__tests__fullscreen_footer_selection.snap
---
source: tui/src/app/owned_transcript_tests.rs
assertion_line: 1545
expression: "normalize_snapshot_paths(buffer_text(crate::custom_terminal::test_support::last_rendered_buffer(&tui.terminal)))"
---


















                                                  Selecting footer · esc cancel

› draft stays here

  GPT-5.6-Sol default · /tmp/project
                                                       ⚠ 1 warning · f2 to view
