codex-rs/tui/src/app/snapshots/codex_tui__app__owned_transcript__tests__fullscreen_prompt_remote_images.snap
---
source: tui/src/app/owned_transcript_tests.rs
assertion_line: 1654
expression: "normalize_snapshot_paths(frames.join(\"\\n\\n\"))"
---
Draft
History stays visible




  [Image #1]
  [Image #2]

› Edit this prompt

  GPT-5.6-Sol default · /tmp/project


Up
History stays visible




  [Image #11]
  [Image #12]

› Edit this prompt

  GPT-5.6-Sol default · /tmp/project


Up
History stays visible




  [Image #10]
  [Image #11]

› Edit this prompt

  GPT-5.6-Sol default · /tmp/project


Delete
History stays visible




  [Image #10]
  [Image #11]

› Edit this prompt

  GPT-5.6-Sol default · /tmp/project


Down
History stays visible




  [Image #1]
  [Image #2]

› Edit this prompt

  GPT-5.6-Sol default · /tmp/project
