codex-rs/tui/src/app/snapshots/codex_tui__app__owned_transcript__tests__owned_find_pending_chord_footer.snap
---
source: tui/src/app/owned_transcript_tests.rs
expression: "rendered.lines().skip(usize::from(cursor.y)).take(2).map(str::trim).collect::<Vec<_>>().join(\"\\n\")"
---
Find: alpha betax
⌃x then · h move line start · esc cancel
