codex-rs/tui/src/app/snapshots/codex_tui__app__owned_transcript__tests__owned_transcript_composer_gap.snap
---
source: tui/src/app/owned_transcript_tests.rs
assertion_line: 220
expression: "snapshots.join(\"\\n\\n\")"
---
Latest
Transcript row 35
Transcript row 36
Transcript row 37
Transcript row 38
Transcript row 39
Transcript row 40


› draft

  gpt-test default · /tmp/project


Reading
Transcript row 30
Transcript row 31
Transcript row 32
Transcript row 33
Transcript row 34
Transcript row 35
                             ↓ Back to bottom · esc

› draft

  gpt-test default · /tmp/project
  esc latest

Resized multiline composer
Transcript row 30
Transcript row 31
Transcript row 32
Transcript row 33
         ↓ Back to bottom · esc

› draft
  second line
  third line

  gpt-test default · /tmp/project
  esc latest

Tiny terminal

› draft

  gpt-test default · /tmp/project
  esc latest

Detailed
• Viewed image assets/detail-image.png





                             ↓ Back to bottom · esc

› preserved draft

  gpt-test default · /tmp/project
  esc latest
