codex-rs/tui/src/app/snapshots/codex_tui__app__owned_transcript__tests__prompt_navigation.snap
---
source: tui/src/app/owned_transcript_tests.rs
expression: "normalize_snapshot_paths(buffer_text(crate::custom_terminal::test_support::last_rendered_buffer(&tui.terminal)))"
---

› first question



› second question



› third question


› Ask Codex to do anything

  gpt-test default · /tmp/project
  Browsing · ↑↓/jk scroll · ←→/hl prompts · ⌃t details · ↵ rewind · esc back
